Schedule/Gaming/Weekly/V2/README.md

***

# New gaming schedule (weekly)

On Saturday, October 24th 2020, I had to set a schedule to limit my gaming. I went on a hiatus that lasted over half the month, and returning into things, I am already overloaded at 60%
I have decided to split non-daily games into time slots on certain days. My new limit is 2.5-4.5 hours of gaming a day, 1 hour limit on shooting games (included into total)

***

## Game list:

### A

AdVenture Capitalist

AdVenture Communist

### B

Bakery story

Boom Beach

Bit City

### C

Clash of Clans

Clash Royale

City story

### D

Disco Zoo

### E

### F

Farm story

Fashion story

### G

### H

Hay day

### I

Idle Miner Tycoon

### J

Jewels

### K

### L

Lego Tower

### M

Merge Plane

Minecraft

Mari0

### N

### O

### P

Pet shop story

Plants vs. Zombies 2

Pocket Frogs

Pocket Trains

### Q

### R

Restaurant Story

### S

### T

Team Fortress 2

Tiny Tower

### U

### V

### W

### X

### Y

### Z

25 games total

***

# The weekly schedule

## Monday:

Usuals:

> Tiny Tower, Jewels, possibly: Minecraft

Pocket day:

> Pocket frogs, Pocket trains

## Tuesday:

Usuals: 

> Tiny Tower, Jewels, possibly: Minecraft

Others:

> Idle Miner Tycoon, Bit City

## Wednesday:

Usuals:

> Tiny Tower, Jewels, possibly: Minecraft

Others:

> Disco Zoo

> Empty time slot, pick 1 game at random

## Thursday:

Usuals:

> Tiny Tower, Jewels, possibly: Minecraft

Lego day: 

> Lego Tower

Storm day: 

> Restaurant story, Bakery story, Pet shop story, Fashion story, Farm story, City story

## Friday:

Usuals: 

> Tiny Tower, Jewels, possibly: Minecraft

Oldschool Friday: 

> Merge Plane

Others:

> Empty time slot, pick 1 game at random

## Saturday

Usuals:

> Tiny Tower, Jewels, possibly: Minecraft

Economic Saturday: 

> AdCap, AdCom

## Sunday:

Usuals:

> Tiny Tower, Jewels, possibly: Minecraft

Supercell Sunday:

> Clash of Clans, Boom Beach, Hay Day, Clash Royale

### End of week

***

### Games to pick at random:

* <none>

*Team Fortress 2

* Bit City

* Minecraft

* Clash of Clans

* Clash Royale

* Boom Beach

* Hay Day

* Merge Plane

* Idle Miner Tycoon

* Pocket Trains

* Pocket Frogs

* Disco Zoo

* Lego Tower

* Plants vs. Zombies 2

* Mari0

* Other

***

## Limitations

On Thursday, November 5th 2020, I discovered that all 6 storm8 games no longer let me cheat and have infinite duration on items produced. It glitched out a couple times and let items be preserved for over 2 weeks without paying extra. This doesn't seem to work anymore, and now the sessions are being operated differently.

***

## Under consideration

It is under consideration that Lego Tower gameplay should be moved to Wednesday, as Thursday already has 6 games set. It takes me all the way down to 13% battery to successfully play all 7 games under a new style. The con of this is that Wednesday is a lax day, with 3 required games instead of 4. I am unsure if I want to get rid of my only free day.

***
